--- a/style.css
+++ b/style.css
@@ -1,3 +1,57 @@
-h1 {
-  background-color: aqua;
+:root {
+  --colorBrown: #e08b6c;
+}
+body {
+  padding: 0;
+  margin: 0;
+}
+header {
+  background-color: black;
+  color: aliceblue;
+}
+.website-header {
+  padding: 20px;
+  height: 80px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.website-header img {
+  width: 50px;
+  height: 50px;
+  margin: 0 30px;
+}
+.website_header h1 {
+  margin: auto 0;
+}
+.social-icons {
+  text-align: right;
+  flex-grow: 1;
+}
+.social-icons i {
+  margin: 0 7px;
+  cursor: pointer;
+  font-size: 25px;
+}
+nav {
+  background-color: black;
+  height: 50px;
+  margin-bottom: 20px;
+}
+nav ul {
+  margin: 20px 0 0 0;
+}
+.navbar-nav li {
+  list-style: none;
+  display: inline-block;
+  padding: 10px 20px;
+}
+.navbar-nav li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: 800px;
+}
+.navbar-nav li a:hover {
+  color: var(--colorBrown);
 }
