--- a/style.css
+++ b/style.css
@@ -134,3 +134,117 @@ nav ul {
 .news-container:hover {
   cursor: pointer;
 }
+.more-news {
+  display: flex;
+  background-color: black;
+  justify-content: space-around;
+  color: #fff;
+  padding: 0 5%;
+}
+.more-news img {
+  width: 100%;
+}
+.news-section {
+  display: flex;
+  flex-basis: 70%;
+  justify-content: space-between;
+  text-align: justify;
+}
+aside {
+  flex-basis: 25%;
+  padding: 10px;
+  border: 1px solid #fff;
+  margin: auto 0;
+  border-radius: 5px;
+}
+.world,
+.sport {
+  flex-basis: 45%;
+}
+.world h2 {
+  background-color: #b2175b;
+  padding: 0 10px;
+}
+.sport h2 {
+  background-color: #3c1b73;
+  padding: 0 10px;
+}
+aside h4 {
+  height: 40px;
+  padding: 0 10px;
+}
+.recent-news {
+  display: flex;
+}
+.recent-news img {
+  width: 70px;
+  height: 70px;
+  margin: 10px;
+}
+.recent-news p {
+  font-size: 14px;
+  font-weight: bold;
+  margin: auto;
+}
+.social-links {
+  display: flex;
+  padding: 5%;
+  justify-content: space-between;
+}
+.social-links section {
+  flex-basis: 30%;
+}
+.social-icons-footer {
+  font-size: 37px;
+  padding: 5px;
+}
+.instagram img {
+  padding: 5px;
+}
+.footer-buttons {
+  display: block;
+  border: 1px solid #2196f3;
+  color: #2196f3;
+  font-size: 14px;
+  font-weight: bolder;
+  background-color: white;
+  margin: 20px auto;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+.footer-buttons:hover {
+  color: #fff;
+  border: 1px solid #fff;
+  background-color: #2196f3;
+}
+.copy-right {
+  width: 100%;
+  background-color: black;
+  color: #fff;
+  padding: 5px;
+  text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .website-header img {
+    width: 35px;
+    height: 35px;
+    padding: 5px;
+  }
+  .website-header h1 {
+    margin-top: 15px;
+    font-size: 15px;
+  }
+  .breaking-news-section {
+    padding: 10px;
+    flex-wrap: wrap;
+    height: 50px;
+  }
+  .navbar-toggler-icon {
+    background-image: url(./image/menu.jpg);
+  }
+  .navbar-collapse {
+    background-color: black;
+    z-index: 16;
+  }
+}
